--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "Training and production center site",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --config webpack.dev.js"
+    "dev": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.build.js"
   },
   "author": "me",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^6.0.0",
     "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.8.0",
+    "postcss": "^8.4.34",
+    "postcss-loader": "^8.1.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
