--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   "author": "me",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/preset-env": "^7.23.9",
     "autoprefixer": "^10.4.17",
+    "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
+    "core-js": "^3.36.0",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^6.0.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.8.0",
     "postcss": "^8.4.34",
     "postcss-loader": "^8.1.0",
+    "postcss-preset-env": "^9.4.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
